deploy/k8s/10-drone/manifest-drone.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: devops
  labels:
    app: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      automountServiceAccountToken: false
      serviceAccountName: drone-server
      containers:
        - name: drone-server
          image: "drone/drone:2"
          resources: {}
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: drone-server-data
              mountPath: /data
              subPath: ""
      volumes:
        - name: drone-server-data
          persistentVolumeClaim:
            claimName: pvc-iscsi-drone-server-data

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drone-runner-docker
  namespace: devops
  labels:
    app: drone-runner-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner-docker
  template:
    metadata:
      labels:
        app: drone-runner-docker
    spec:
      serviceAccountName: drone-runner-docker
      containers:
        - name: drone-runner-docker
          image: "drone/drone-runner-docker:1.8.1"
          resources: {}
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: tcp
          readinessProbe:
            tcpSocket:
              port: tcp
        - name: dind
          image: "docker:20-dind"
          resources: {}
          imagePullPolicy: IfNotPresent
          command:
            - dockerd
          args:
            - --host
            - tcp://localhost:2375
          securityContext:
            privileged: true
          livenessProbe:
            exec:
              command:
                - docker
                - -H
                - tcp://localhost:2375
                - images
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                - docker
                - -H
                - tcp://localhost:2375
                - images
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - mountPath: /var/lib/docker
              name: storage
              subPath: docker
            - name: daemon-json
              mountPath: /etc/docker/daemon.json
              subPath: daemon.json
        - name: gc
          image: "drone/gc:1.0.0"
          resources: {}
          imagePullPolicy: IfNotPresent
      volumes:
        - name: daemon-json
          configMap:
            name: docker-deamon-json
        - emptyDir: {}
          name: storage
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drone-secrets
  namespace: devops
  labels:
    app: drone-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-secrets
  template:
    metadata:
      labels:
        app: drone-secrets
    spec:
      serviceAccountName: drone-secrets
      containers:
        - name: drone-secrets
          image: drone/kubernetes-secrets:latest
          resources: {}
          ports:
            - containerPort: 3000
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: drone-server-svc
  namespace: devops
  labels:
    app: drone-server
spec:
  selector:
    app: drone-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: drone-runner-docker
  namespace: devops
  labels:
    app: drone-runner-docker
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: drone-runner-docker

---
kind: Service
apiVersion: v1
metadata:
  name: drone-secrets
  namespace: devops
  labels:
    app: drone-secrets
spec:
  selector:
    app: drone-secrets
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: drone-server
  namespace: devops
  labels:
    app: drone-server
spec:
  ingressClassName: nginx-public
  rules:
    - host: "drone.theautomation.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone-server-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - drone.theautomation.nl
      secretName: cloudflare-tls
